add problem bisnis
